--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1227,7 +1227,7 @@ td {
 }
 
 	#top-bar .far {
-		font-size: 22px;
+		font-size: 24px;
 		text-align: center;
 		width: 40px;
 		height: 40px;
@@ -1341,6 +1341,10 @@ td {
 
 	#top-bar .fa-bars {
 		display: inline-block;
+	}
+
+	#top-bar .far {
+		font-size: 18px;
 	}
 
 	#top-bar .fa-chevron-left {
